# YaMusicTracker

./: Dockerfile  README.md  config.yaml  pyproject.toml
app/: database.py  main.py  utils.py
