[project]
name = "yamusictracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bestconfig>=1.3.6",
    "httpx>=0.28.1",
    "json5>=0.12.0",
    "loguru>=0.7.3",
    "psycopg[binary,pool]>=3.2.6",
    "sqlalchemy>=2.0.40",
    "yandex-music>=2.2.0",
]
